# QT-CH341A-LINUX-PROGRAMMER

./: .gitmodules  CMakeLists.txt  README.md  prog24.qrc
PROG_INSTALL/: Prog24cXX.desktop  install.sh  prog24
example/: ch341eeprom.h  ch341funcs.c  counter.h  eepromsize.h  main.cpp  mainwindow.cpp  mainwindow.h  programmer.cpp  programmer.ui  qhexedit.pro  qhexedit.pro.user.667662c  qhexedit.pro.user.e3c24e3
example/translations/: qhexedit_cs.ts  qhexedit_de.qm  qhexedit_ru.qm  qhexedit_ru.ts
include/: eepromsize.h  mainwindow.h  programmer.h
resources/: Prog24cXX.desktop
src/: eepromsize.cpp  eepromsize.ui  mainwindow.cpp  programmer.cpp
translations/: qhexedit_cs.qm  qhexedit_de.ts  qhexedit_it.ts
